# lazydbg

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs  macros.rs
tests/: integration.rs
